Add Session Storage and Get Api User's info

--- a/Homework/login.html
+++ b/Homework/login.html
@@ -25,7 +25,7 @@
                             </div>
                             <div class="mb-3">
                               <label for="password" class="form-label">Password</label>
-                              <input type="password" placeholder="admin" class="form-control" id="password">
+                              <input type="password" placeholder="54321" class="form-control" id="password">
                             </div>
                             <button type="submit" class="btn w-100 btn-primary">Login</button>
                           </form>
